QSCCD-76: Add a color icon to the tab bar and fix various small issues.
* Fixed typo

* Adjustments following code review

* Remove unused ctrl assignation

* Fix bug where profile list would open on the info btn click

* Add color and intial icon to replace chart icon

* Fixed issue where long name were overflowing the top menu and empty profiles list display

See merge request opalmedapps/qplus!931

--- a/src/css/directives/profile-selector.directive.css
+++ b/src/css/directives/profile-selector.directive.css
@@ -13,6 +13,10 @@
     justify-content: center;
 }
 
+.profile-selector--title--text {
+    overflow: hidden;
+}
+
 .profile-selector--title--icon {
     background-color: #F7F6F6;
     width: 15px;
